fix alignment

--- a/public/css/CTA.css
+++ b/public/css/CTA.css
@@ -231,7 +231,7 @@ cta-form .form-group {
     place-content: center;
 }
 
-.btn--form{
+.btn-sign-up{
     width:100%
 }
 
